--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ initWorkingDir: &initWorkingDir
   name: Initialize Working Directory
   pwd: /
   command: |
-    mkdir -p ~/go/src/rajansandeep/ci
+    mkdir -p ~/go/src/${CIRCLE_PROJECT_USERNAME}/ci
     sudo chown -R circleci ~/go
     mkdir -p ~/go/out/tests
     mkdir -p ~/go/out/logs
@@ -18,7 +18,7 @@ initWorkingDir: &initWorkingDir
 integrationDefaults: &integrationDefaults
   machine:
     image: ubuntu-1604:201903-01
-  working_directory: ~/go/src/rajansandeep/ci
+  working_directory: ~/go/src/${CIRCLE_PROJECT_USERNAME}/ci
   environment:
     - K8S_VERSION: v1.13.3
     - KUBECONFIG: /home/circleci/.kube/config
@@ -56,10 +56,10 @@ setupKubernetes: &setupKubernetes
           kubectl scale -n kube-system deployment/coredns --replicas=1
 
           # Patch CoreDNS to update deployment.
-          kubectl patch deployment coredns -n kube-system -p "$(cat ~/go/src/rajansandeep/ci/build/kubernetes/coredns_deployment_patch.yaml)"
+          kubectl patch deployment coredns -n kube-system -p "$(cat ~/go/src/${CIRCLE_PROJECT_USERNAME}/ci/build/kubernetes/coredns_deployment_patch.yaml)"
 
           # Deploy test objects
-          kubectl create -f ~/go/src/rajansandeep/ci/build/kubernetes/dns-test.yaml
+          kubectl create -f ~/go/src/${CIRCLE_PROJECT_USERNAME}/ci/build/kubernetes/dns-test.yaml
 
           # Add federation labels to node
           kubectl label nodes minikube failure-domain.beta.kubernetes.io/zone=fdzone
@@ -74,9 +74,9 @@ buildCoreDNSImage: &buildCoreDNSImage
     - run:
         name: Build latest CoreDNS Docker image
         command: |
-          mkdir -p ~/go/src/rajansandeep/coredns
-          git clone https://github.com/rajansandeep/coredns ~/go/src/rajansandeep/coredns
-          cd ~/go/src/rajansandeep/coredns
+          mkdir -p ~/go/src/${CIRCLE_PROJECT_USERNAME}/coredns
+          git clone https://github.com/${CIRCLE_PROJECT_USERNAME}/coredns ~/go/src/${CIRCLE_PROJECT_USERNAME}/coredns
+          cd ~/go/src/${CIRCLE_PROJECT_USERNAME}/coredns
           make coredns SYSTEM="GOOS=linux" && \
           docker build -t coredns . && \
           docker tag coredns localhost:5000/coredns && \
@@ -86,10 +86,10 @@ buildKubernetaiImage: &buildKubernetaiImage
   - run:
       name: Build latest CoreDNS+Kubernetai Docker image
       command: |
-        mkdir -p ~/go/src/rajansandeep/kubernetai
-        git clone https://github.com/rajansandeep/kubernetai ~/go/src/rajansandeep/kubernetai
+        mkdir -p ~/go/src/${CIRCLE_PROJECT_USERNAME}/kubernetai
+        git clone https://github.com/${CIRCLE_PROJECT_USERNAME}/kubernetai ~/go/src/${CIRCLE_PROJECT_USERNAME}/kubernetai
 
-        cd ~/go/src/rajansandeep/kubernetai
+        cd ~/go/src/${CIRCLE_PROJECT_USERNAME}/kubernetai
         GO111MODULE=on go get -v -d
         make coredns SYSTEM="GOOS=linux" && \
         mv ./coredns ../coredns/
@@ -103,10 +103,10 @@ buildMetadataEdns0Image: &buildMetadataEdns0Image
   - run:
       name: Build latest CoreDNS+metadata_edns0 Docker image
       command: |
-        mkdir -p ~/go/src/rajansandeep/metadata_edns0
-        git clone https://github.com/rajansandeep/metadata_edns0 ~/go/src/rajansandeep/metadata_edns0
+        mkdir -p ~/go/src/${CIRCLE_PROJECT_USERNAME}/metadata_edns0
+        git clone https://github.com/${CIRCLE_PROJECT_USERNAME}/metadata_edns0 ~/go/src/${CIRCLE_PROJECT_USERNAME}/metadata_edns0
 
-        cd ~/go/src/rajansandeep/metadata_edns0
+        cd ~/go/src/${CIRCLE_PROJECT_USERNAME}/metadata_edns0
         GO111MODULE=on go get -v -d
         make coredns SYSTEM="GOOS=linux" && \
         mv ./coredns ../coredns/
@@ -127,7 +127,7 @@ jobs:
       - run:
           name: Run Kubernetes tests
           command: |
-            cd ~/go/src/rajansandeep/ci/test/kubernetes
+            cd ~/go/src/${CIRCLE_PROJECT_USERNAME}/ci/test/kubernetes
             GO111MODULE=on go test -v ./...
   k8s-deployment-tests:
     <<: *integrationDefaults
@@ -139,10 +139,10 @@ jobs:
       - run:
           name: Run Kubernetes deployment tests
           command: |
-            mkdir -p ~/go/src/rajansandeep/deployment
-            git clone https://github.com/rajansandeep/deployment ~/go/src/rajansandeep/deployment
+            mkdir -p ~/go/src/${CIRCLE_PROJECT_USERNAME}/deployment
+            git clone https://github.com/${CIRCLE_PROJECT_USERNAME}/deployment ~/go/src/${CIRCLE_PROJECT_USERNAME}/deployment
 
-            cd ~/go/src/rajansandeep/ci/test/k8sdeployment
+            cd ~/go/src/${CIRCLE_PROJECT_USERNAME}/ci/test/k8sdeployment
             GO111MODULE=on go test -v ./...
   external-plugin-tests:
     <<: *integrationDefaults
@@ -153,19 +153,19 @@ jobs:
       - run:
           name: Clone CoreDNS repo
           command: |
-            mkdir -p ~/go/src/rajansandeep/coredns
-            git clone https://github.com/rajansandeep/coredns ~/go/src/rajansandeep/coredns
+            mkdir -p ~/go/src/${CIRCLE_PROJECT_USERNAME}/coredns
+            git clone https://github.com/${CIRCLE_PROJECT_USERNAME}/coredns ~/go/src/${CIRCLE_PROJECT_USERNAME}/coredns
       - <<: *buildKubernetaiImage
       - run:
           name: Run Kubernetai plugin tests
           command: |
-            cd ~/go/src/rajansandeep/ci/test/kubernetai
+            cd ~/go/src/${CIRCLE_PROJECT_USERNAME}/ci/test/kubernetai
             GO111MODULE=on go test -v ./...
       - <<: *buildMetadataEdns0Image
       - run:
           name: Run metadata_edns0 plugin tests
           command: |
-            cd ~/go/src/rajansandeep/ci/test/metadata_edns0
+            cd ~/go/src/${CIRCLE_PROJECT_USERNAME}/ci/test/metadata_edns0
             GO111MODULE=on go test -v ./...
 
 workflows:
