--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ integrationDefaults: &integrationDefaults
   environment:
     - K8S_VERSION: v1.15.3
     - KIND_VERSION: v0.5.1
+    - KUBECONFIG: /home/circleci/.kube/kind-config-kind
 
 setupKubernetes: &setupKubernetes
     - run:
@@ -105,7 +106,6 @@ jobs:
       - <<: *initWorkingDir
       - checkout
       - <<: *setupKubernetes
-      - <<: *buildCoreDNSImage
       - run:
           name: Run Kubernetes deployment tests
           command: |
