--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,18 +20,14 @@ integrationDefaults: &integrationDefaults
     image: ubuntu-1604:201903-01
   working_directory: ~/go/src/${CIRCLE_PROJECT_USERNAME}/ci
   environment:
-    - K8S_VERSION: v1.13.3
-    - KUBECONFIG: /home/circleci/.kube/config
-    - MINIKUBE_VERSION: v0.33.1
-    - MINIKUBE_WANTUPDATENOTIFICATION: false
-    - MINIKUBE_WANTREPORTERRORPROMPT: false
-    - CHANGE_MINIKUBE_NONE_USER: true
-    - MINIKUBE_HOME: /home/circleci
+    - K8S_VERSION: v1.15.3
+    - KIND_VERSION: v0.5.1
+    - KUBECONFIG: /home/circleci/.kube/kind-config-kind
 
 setupKubernetes: &setupKubernetes
     - run:
         name: Setup Kubernetes
-        command: ~/go/src/${CIRCLE_PROJECT_USERNAME}/ci/build/kubernetes/minikube_setup.sh
+        command: ~/go/src/${CIRCLE_PROJECT_USERNAME}/ci/build/kubernetes/k8s_setup.sh
 
 buildCoreDNSImage: &buildCoreDNSImage
     - run:
@@ -42,8 +38,7 @@ buildCoreDNSImage: &buildCoreDNSImage
           cd ~/go/src/${CIRCLE_PROJECT_USERNAME}/coredns
           make coredns SYSTEM="GOOS=linux" && \
           docker build -t coredns . && \
-          docker tag coredns localhost:5000/coredns && \
-          docker push localhost:5000/coredns
+          kind load docker-image coredns
 
 buildKubernetaiImage: &buildKubernetaiImage
   - run:
@@ -58,9 +53,8 @@ buildKubernetaiImage: &buildKubernetaiImage
         mv ./coredns ../coredns/
         cd ../coredns/
 
-        docker build -t coredns . && \
-        docker tag coredns localhost:5000/coredns && \
-        docker push localhost:5000/coredns
+        docker build -t coredns .
+        kind load docker-image coredns
 
 buildMetadataEdns0Image: &buildMetadataEdns0Image
   - run:
@@ -75,9 +69,8 @@ buildMetadataEdns0Image: &buildMetadataEdns0Image
         mv ./coredns ../coredns/
         cd ../coredns/
 
-        docker build -t coredns . && \
-        docker tag coredns localhost:5000/coredns && \
-        docker push localhost:5000/coredns
+        docker build -t coredns .
+        kind load docker-image coredns
 
 jobs:
   coredns-benchmark-tests:
@@ -113,13 +106,13 @@ jobs:
       - <<: *initWorkingDir
       - checkout
       - <<: *setupKubernetes
-      - <<: *buildCoreDNSImage
       - run:
           name: Run Kubernetes deployment tests
           command: |
             mkdir -p ~/go/src/${CIRCLE_PROJECT_USERNAME}/deployment
             git clone https://github.com/${CIRCLE_PROJECT_USERNAME}/deployment ~/go/src/${CIRCLE_PROJECT_USERNAME}/deployment
-
+            mkdir -p ~/go/src/${CIRCLE_PROJECT_USERNAME}/coredns
+            git clone https://github.com/${CIRCLE_PROJECT_USERNAME}/coredns ~/go/src/${CIRCLE_PROJECT_USERNAME}/coredns
             cd ~/go/src/${CIRCLE_PROJECT_USERNAME}/ci/test/k8sdeployment
             GO111MODULE=on go test -v ./...
   external-plugin-tests:
