--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version: 2
+version: 2.1
 
 initWorkingDir: &initWorkingDir
   type: shell
@@ -21,8 +21,8 @@ integrationDefaults: &integrationDefaults
     image: ubuntu-1604:201903-01
   working_directory: ~/go/src/${CIRCLE_PROJECT_USERNAME}/ci
   environment:
-    - K8S_VERSION: v1.18.2
-    - KIND_VERSION: v0.8.1
+    - K8S_VERSION: 1.19.1
+    - KIND_VERSION: v0.9.0
     - KUBECONFIG: /home/circleci/.kube/kind-config-kind
 
 setupKubernetes: &setupKubernetes
@@ -90,7 +90,13 @@ jobs:
             cd ~/go/src/${CIRCLE_PROJECT_USERNAME}/coredns
             go test -v -bench=.  ./...
   kubernetes-tests:
+    parameters:
+      k8s-version:
+        type: env_var_name
+        default: 1.19.1
     <<: *integrationDefaults
+    environment:
+      - K8S_VERSION: << parameters.k8s-version >>
     steps:
       - <<: *initWorkingDir
       - checkout
@@ -141,10 +147,12 @@ jobs:
             GO111MODULE=on go test -v ./...
 
 workflows:
-  version: 2
   integration-tests:
     jobs:
       - coredns-benchmark-tests
-      - kubernetes-tests
       - k8s-deployment-tests
       - external-plugin-tests
+      - kubernetes-tests
+          matrix:
+            parameters:
+              k8s-version: [ "1.19.1", "1.18.8", "1.17.11" ]
