--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,7 +74,7 @@ executors:
     parameters:
       k8s-version:
         type: string
-        default: 1.19.1
+        default: v1.19.1
     machine:
       image: ubuntu-1604:201903-01
     working_directory: ~/go/src/${CIRCLE_PROJECT_USERNAME}/ci
@@ -164,7 +164,4 @@ workflows:
       - kubernetes-tests:
           matrix:
             parameters:
-              k8s-version:
-                - v1.19.1
-                - v1.18.8
-                - v1.17.11
+              k8s-version: ["v1.19.1", "v1.18.8", "v1.17.11"]
