--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,7 +75,7 @@ executors:
       image: ubuntu-1604:201903-01
     working_directory: ~/go/src/${CIRCLE_PROJECT_USERNAME}/ci
     environment:
-      - KIND_VERSION: v0.9.0
+      - KIND_VERSION: v0.10.0
       - KUBECONFIG: /home/circleci/.kube/kind-config-kind
 
 
@@ -112,10 +112,11 @@ jobs:
           name: Run Kubernetes tests
           command: |
             cd ~/go/src/${CIRCLE_PROJECT_USERNAME}/ci/test/kubernetes
+            go mod download
             GO111MODULE=on go test -v ./...
   k8s-deployment-tests:
     environment:
-      - K8S_VERSION: v1.19.1
+      - K8S_VERSION: v1.20.2
     executor: default-executor
     steps:
       - initworkingdir
@@ -132,7 +133,7 @@ jobs:
             GO111MODULE=on go test -v ./...
   external-plugin-tests:
     environment:
-      - K8S_VERSION: v1.19.1
+      - K8S_VERSION: v1.20.2
     executor: default-executor
     steps:
       - initworkingdir
@@ -165,4 +166,4 @@ workflows:
       - kubernetes-tests:
           matrix:
             parameters:
-              k8s-version: ["v1.19.1", "v1.18.8", "v1.17.11"]
+              k8s-version: ["v1.20.2", "v1.19.7", "v1.18.15"]
